# ECE1747-Projects

./: .gitignore  1.csv  1.txt  CMakeLists.txt  Makefile  OriginalMazeSolver.cpp  Parallel_bruteforce.cpp  SequentialMazeSolver.cpp  Slab - ParallelMazeSolver.cpp  bruteforce.ipynb  experiments.ipynb  mazegenerator.ipynb  parallel_bf.cpp  parallel_bf_test.cpp  parallel_g.cpp  parallel_random.cpp  sequential  singlethread_bf.cpp  singlethread_g.cpp  test.cpp  todo.txt
maze/14/: 01_1.txt  01_2.txt  01_3.txt  02_1.txt  02_2.txt  02_3.txt  03_1.txt  03_2.txt  03_3.txt  04_1.txt  04_2.txt  04_3.txt  05_1.txt  05_2.txt  05_3.txt
maze/19/: 01_1.txt  01_2.txt  01_3.txt  02_1.txt  02_2.txt  02_3.txt  03_1.txt  03_2.txt  03_3.txt  04_1.txt  04_2.txt  04_3.txt  05_1.txt  05_2.txt  05_3.txt
maze/24/: 01_1.txt  01_2.txt  01_3.txt  02_1.txt  02_2.txt  02_3.txt  03_1.txt  03_2.txt  03_3.txt  04_1.txt  04_2.txt  04_3.txt  05_1.txt  05_2.txt  05_3.txt
maze/29/: 01_1.txt  01_2.txt  01_3.txt  02_1.txt  02_2.txt  02_3.txt  03_1.txt  03_2.txt  03_3.txt  04_1.txt  04_2.txt  04_3.txt  05_1.txt  05_2.txt  05_3.txt
maze/34/: 01_1.txt  01_2.txt  01_3.txt  02_1.txt  02_2.txt  02_3.txt  03_1.txt  03_2.txt  03_3.txt  04_1.txt  04_2.txt  04_3.txt  05_1.txt  05_2.txt  05_3.txt
maze/39/: 01_1.txt  01_2.txt  01_3.txt  02_1.txt  02_2.txt  02_3.txt  03_1.txt  03_2.txt  03_3.txt  04_1.txt  04_2.txt  04_3.txt  05_1.txt  05_2.txt  05_3.txt
maze/44/: 01_1.txt  01_2.txt  01_3.txt  02_1.txt  02_2.txt  (+10 more)
sample_mazes/: 39.txt  RANmaze1.txt  RANmaze2.txt  test.txt
sample_mazes.old/: RANmaze1.txt
(+30 files in other folders)
